<?xml version="1.0"?>
<package>
  <name>utils_path</name>
  <version>0.0.1</version>
  <description>The utils_path package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cslibs_utils</build_depend>
  <build_depend>utils_generic</build_depend>

  <run_depend>cslibs_utils</run_depend>
  <run_depend>utils_generic</run_depend>
</package>
