<?xml version="1.0"?>
<package>
  <name>cslibs_path_planning</name>
  <version>0.0.1</version>
  <description>This package provides different path planning algorithms.</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cslibs_utils</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  
  <run_depend>cslibs_utils</run_depend>
</package>
