<?xml version="1.0"?>
<package>
  <name>cslibs_path_planning</name>
  <version>1.0.0</version>
  <description>This package provides different path planning algorithms.</description>

  <author email="sebastian.buck@uni-tuebingen.de">Sebastian Buck</author>

  <maintainer email="sebastian.buck@uni-tuebingen.de">Sebastian Buck</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cslibs_navigation_utilities</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  
  <run_depend>cslibs_navigation_utilities</run_depend>
</package>
